--- a/src/styles/globals2.css
+++ b/src/styles/globals2.css
@@ -98,7 +98,21 @@
     font-family: "Raleway", Sans-serif;
     padding-left: 0% !important;
   }
+
+  .pool {
+    width: 1079px !important;
+    right: 5% !important;
+    bottom: -35% !important;
+    height: 23% !important;
+    color: black !important;
+  }
+
+  .btnimagine {
+    left: 23% !important;
+    bottom: 4% !important;
+  }
 }
+
 
 
 /* ---------------------------------------------- */
@@ -385,32 +399,36 @@
 }
 
 .text1imagine {
-  margin:3% 0%;
+  margin: 3% 0%;
   font-weight: bold;
   font-family: "Raleway", Sans-serif;
   color: #3c4043;
   text-align: center;
 
 }
+
 .text2imagine {
-  margin:01% 25% 25% 25%;
+  margin: 01% 25% 25% 25%;
   font-family: "Raleway", Sans-serif;
   color: #3c4043;
-  text-align: justify;   /* nice  like word*/ 
+  text-align: justify;
+  /* nice  like word*/
   font-weight: 500;
 }
-.text3imagine{ 
+
+.text3imagine {
   font-family: "Raleway", Sans-serif;
-  color: black; 
+  color: black;
   font-weight: 500;
   text-align: center;
 }
- 
+
 
 .divider {
   position: relative;
   margin: 20px 0;
 }
+
 .divider::before {
   content: "";
   position: absolute;
@@ -420,40 +438,188 @@
   height: 1px;
   background-color: black;
 }
-.imagine-section2{
+
+.imagine-section2 {
+  margin-bottom: 20%;
   padding: 4% 0%;
 }
+
 .main-wrapper2 {
   width: 1079px;
   margin: 0 auto;
   max-width: 90%;
-margin-bottom: 5%;
+  margin-bottom: 5%;
 }
+
 .qouiItem {
   background-color: white;
-  color:black;
+  color: black;
 
   width: 100%;
-  height: 100px; 
+  height: 100px;
   text-align: center;
 
 
 
 }
-.qouiItemtext
-{
 
-  color:black;
+.qouiItemtext {
+
+  color: black;
   text-align: center;
-  margin: 12%  10px;
+  margin: 12% 10px;
 
 
 }
+
 .pool {
   width: 1079px;
   right: 22%;
   bottom: -40%;
-  height: 38%;
+  height: 33%;
   color: black;
+
+}
+
+.textpool {
+  text-align: center;
+  margin: 8% 10px;
+  color: #181236;
+  font-family: "Helvetica", Sans-serif;
+  font-size: 36px;
+  font-weight: normal;
+  line-height: 1.2em;
+  letter-spacing: -1px;
+}
+
+.btnimagine {
+  background-color: #181236;
+  text-align: center;
+
+  height: 35px;
+  line-height: 35px;
+  font-size: 16px;
+  border-radius: 30px;
+  font-family: "Raleway", Sans-serif;
+  font-weight: 500;
+  left: 42%;
+  bottom: 25%;
+  padding: 11px 42px;
+  letter-spacing: 0.2px;
+  color: white;
+  text-decoration: none;
+}
+
+
+
+.btnimagine:hover {
+  color: white !important
+}
+
+.text-offres {
+  color: #181236;
+  font-family: "Helvetica", Sans-serif;
+  font-weight: normal;
+  line-height: 36px;
+  letter-spacing: 0px;
+  word-spacing: 0em;
+
+}
+
+.cardscroll {
+  margin: 30% 0%;
+
+}
+
+.title1-scroll {
+  font-family: "Raleway", Sans-serif;
+  color: black;
+  font-weight: 500;
+  text-align: center;
+}
+
+.title2-scroll {
+  font-family: "Raleway", Sans-serif;
+  color: black;
+  font-weight: 500;
+  text-align: center;
+}
+
+.title3-scroll {
+  font-family: "Raleway", Sans-serif;
+  color: black;
+  font-weight: 500;
+  text-align: center;
+}
+
+.card-img-top {
+  width: 10% ;
+  margin-top: 40% !important;
+  margin-right: auto !important;
+  margin-bottom:5%  !important;
+  margin-left: auto !important;
+  display: block;
+}
+.title1-scroll{
+  font-size: 20px !important;
+  font-weight: 500;
+  font-family: "Raleway", Sans-serif;
+  margin: 0 0 20px;
+}
+.title2-scroll{
+  font-size: 15px !important;
+  font-weight: bold;
+  font-family: "Raleway", Sans-serif;
+  margin: 0 0 20px;
+}
+.title3-scroll{
+  font-size: 15px !important;
+  font-weight: bold;
+  font-family: "Raleway", Sans-serif;
+ 
+}
+.content-scroll{
+  width: 80%;
+  color: #3C4043;
+  font-size: 15px !important;
+  font-weight: 400;
+  margin: 0 auto;
+  text-align: center;
+}
+.textdamien{
+  text-align: center;
+    color:#181236;
+    font-family: "Helvetica", Sans-serif;
+    font-size: 36px;
+    font-weight: normal;
+    line-height: 1.2em;
+    letter-spacing: 0px;
+    word-spacing: 0em;
+}
+.damien-img {
+ 
+  border-style: solid;
+  border-width: 5px 5px 5px 5px;
+  border-color: #18123629;
+  border-radius: 100px 100px 100px 100px;
+}
+.damient-desc{
+
   
+    color: #3C4043;
+    font-size: 100%;
+    font-weight: 400; 
+    width: 82%;
+     
+}
+
+.damient-title1{
+  margin: 2% 0% 4%  0% ;
+  font-size: 24px;
+  font-weight: 400;
+  text-transform: capitalize;
+  font-style: normal;
+  text-decoration: none;
+  line-height: 1em;
+  letter-spacing: -1px;
 }
