--- a/src/styles/globals2.scss
+++ b/src/styles/globals2.scss
@@ -2,13 +2,52 @@
 
 
 @media only screen and (max-width: 600px) {
+  .textexperience{
+    margin: 0% 5%;
+    line-height: 18px;
+    margin-bottom: 11%;
+    text-align: justify;  
+  }
+  .text2imagine {
+    margin: 10% 5%!important;
+    font-family: "Raleway", Sans-serif;
+    color: #3c4043;
+    text-align: justify;
+    font-weight: 500;
+}
+  .image-starour-dna2 {
+    position: absolute!important;
+    right: 58%!important;
+    top: 24%!important;
+}
+
+
+  .btncontact2{
+    margin-top: -2%!important;
+    margin-left: 24%!important;
+    height: auto !important;
+    padding: 10px !important;
+    width: 37%!important;
+  }
+  .btncontact {
+    margin-top: 2 !important;
+    margin-left: 9% !important;
+    height: auto !important;
+    padding: 27px !important;
+    width: 40% !important;
+}
+  .gridform{
+    width: 100%!important;
+    }
+  .bloc2{ margin-top: 10%;}
   .iframesection {
     margin-bottom: 100% !important;
 
   }
 
   .iframe {
-    margin: 10% 10%;
+    width: 90%;
+     
     height: 700px;
   }
 
@@ -39,7 +78,9 @@
   }
 
   .bluebloc {
-    /* margin:0 28px 0 24px !important */
+    width: 85%;
+    margin-right: auto!important;
+    margin-left: auto!important;
 
   }
 
@@ -239,10 +280,50 @@
     left: 23% !important;
     bottom: 4% !important;
   }
+  .imgflech2 { 
+    width: 98%!important;
+  
+  }
+  .imgflech2container {
+    top: -43%!important;
+    height: 52%!important;
+    width: 29%!important; 
+    left: 55%!important;
+  }
+  .joinus{
+    margin: 20% 10% 0% 10% !important;
+    position: relative;
+  
+  }
 }
 
 
 
+/* ---------------------------------------------- */
+@media only screen and (max-width: 1280px) and (min-width: 1271) { 
+ 
+  .cadreimg {
+    position: absolute!important;
+    left: 3%!important;
+    height: 79%!important;
+    width: 37%!important;
+    bottom: 4%!important;
+}
+  .pool {
+    width: 1052px!important;
+    right: 7%!important;
+    bottom: -40%!important;
+    height: 33%!important;
+    color: black!important;
+  
+  }
+  .btnimagine {  
+    bottom: 18%!important; 
+  }
+  .textpool {
+    margin: 6% 10px!important;
+  }
+}
 /* ---------------------------------------------- */
 .flex-wrap-our-values {
   flex-wrap: nowrap;
@@ -384,7 +465,7 @@
   border-radius: 14%;
   position: absolute;
   right: 5%;
-  top: 4%;
+  top: 4%; 
   background-color: #D79B54;
   padding: 1% 4%;
 }
@@ -679,7 +760,20 @@
   font-weight: 500;
   text-align: center;
 }
-
+.card-img-top-blog {
+  width: 100%; 
+  margin-right: auto !important;
+  margin-bottom: 5% !important;
+  margin-left: auto !important;
+  display: block;
+}
+.card-img-top-blog {
+  width: 100%; 
+  margin-right: auto !important;
+  margin-bottom: 5% !important;
+  margin-left: auto !important;
+  display: block;
+}
 .card-img-top {
   width: 10%;
   margin-top: 40% !important;
@@ -844,7 +938,7 @@
 .containerbtn {
   margin-left: 41%;
   margin-top: 5%;
-  margin-bottom: 22%;
+  margin-bottom: 10%;
 }
 
 .backgroundcolorblue {
@@ -887,7 +981,7 @@
   color: white;
   padding: 5%;
   background-color: #181236;
-  ;
+  margin: 0% 0% 10% 0%;
 }
 
 .rendezvoustitle {
@@ -922,7 +1016,7 @@
 
 .cadreimg {
   position: absolute;
-  left: 14%;
+  left: 16%;
   height: 76%;
   width: 29%;
   bottom: 2%;
@@ -957,7 +1051,19 @@
   width: 26%;
   bottom: -2%;
 }
+.imgflech2 {
+  height: 102%;
+  width: 38%;
 
+}
+.imgflech2container{
+  top: -101%;
+  height: 94%;
+  width: 28%;
+  position: absolute;
+  left: 59%;
+}
+ 
 
 .addresses {
   color: white; 
@@ -998,4 +1104,68 @@
  
 .address-list-item{
 
+}
+
+.gridform{
+width: 75%;
+}
+.joinus{
+  margin: 10% 10% 0% 10% ;
+  position: relative;
+
+}
+.btncontact2{
+  margin-top: 2%;
+  margin-left: 50%;
+  height: auto !important;
+  padding: 10px !important;
+  width: 19%;
+}
+ 
+.star-img {
+  width: 89%;
+}
+.image-starour-dna {
+  position: absolute;
+  right: 71%;
+  top: 110%;
+  z-index: 99;
+}
+.fleche-2-exp{
+  height: 50%;
+  width: 46%;
+}
+.image-starour-dna2 {
+  position: absolute;
+  right: 17%;
+  top: 15%;
+}
+
+.fleche-3-exp{
+  height: 52%;
+  width: 62%;
+}
+.image-starour-dna3 {
+  position: absolute;
+  right: 49%;
+  top: 90%;
+}
+ 
+.image-starour-1ourvalues {
+  position: absolute;
+  right: 17%;
+  top: -60%;
+}
+.fleche-1ourvalues {
+  height: 54%;
+  width: 79%;
+}
+.section2contact{
+ 
+  padding-top: 10%; 
+  margin-bottom: 10%;
+}
+.nossecteurs{}
+.img2expertise { 
+  height: 39px;
 }
