--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -63,15 +63,15 @@
 .center-text{
   text-align: center !important;
 }
-.rounded{
-  border-radius: 100% !important;
-  padding: 20px;
-  margin-right: 10px ;
-  background-color: #0C0560;
-  color: white;
-  font-weight: 1000;
+// .rounded{
+//   border-radius: 100% !important;
+//   padding: 20px;
+//   margin-right: 10px ;
+//   background-color: #0C0560;
+//   color: white;
+//   font-weight: 1000;
 
-}
+// }
 
 .input,
 .textarea {
@@ -606,7 +606,7 @@ textarea::placeholder, input::placeholder {
   font-family: "Raleway", Sans-serif;
   font-weight: 500;
   font-style: normal;
-  line-height: 24px;
+  line-height: 33px;
   margin-bottom: 70px;
   font-size: 18px;
 
@@ -1707,7 +1707,7 @@ ul.bullet-before li {
 }
 
 .text-content {
-
+  line-height: 21px;
   font-family: "Raleway", Sans-serif !important;
   font-weight: 500 !important;
   padding-left: 1.9rem !important;
