list of components

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2501,3 +2501,7 @@ ul.bullet-before li {
 .relative-div-2 {
   height: 100px !important;
 }
+
+.modal-backdrop.show{
+  opacity: 0.2 !important;
+}
