--- a/src/styles/globals2.scss
+++ b/src/styles/globals2.scss
@@ -1169,3 +1169,14 @@ width: 75%;
 .img2expertise { 
   height: 39px;
 }
+.width-3buttons-phone { 
+  width:30%!important;
+}
+.width-3buttons-laptop { 
+  width: 50%!important;
+}
+
+
+.width-3buttons-large { 
+  width: 100%!important;
+}
